# mc-bench-backend

./: .dockerignore  .env.template  .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflow/: docker-deploy.yml
.github/workflows/: admin-deploy.yml  admin-worker-deploy.yml  api-deploy.yml  docker-deploy.yml  minecraft-builder-deploy.yml  pr-build.yml  production-deploy.yml  render-worker-deploy.yml  scheduler-deploy.yml  server-worker-deploy.yml  worker-deploy.yml
deploy/: admin-worker-deploy.sh  docker-cleanup.sh  minecraft-builder-push.sh  minecraft-server-push.sh  render-worker-deploy.sh  render-worker-push.sh  scheduler-deploy.sh  server-worker-deploy.sh  server-worker-push.sh  worker-deploy.sh
dev/: seed-data.sql
docs/: build-local-gameservers.md  build_local_gameservers.md
docs/getting-started/: docker-guide.md  python-guide.md  role-grant.md
docs/technical-details/: architecture.md  biome-tinting.md
images/: admin-api.Dockerfile  admin-worker.Dockerfile  api.Dockerfile  deps-builder.Dockerfile  render-worker.Dockerfile  server-worker.Dockerfile  worker.Dockerfile
images/builder-runner/: builder-runner.Dockerfile  command.sh  package-lock.json  package.json
images/minecraft-server/: build-and-save-image.py  minecraft-server.Dockerfile
src/mc_bench/: constants.py
src/mc_bench/auth/: __init__.py  emails.py  permissions.py
src/mc_bench/clients/: alibaba_cloud.py  anthropic.py  deepseek.py  gemini.py  grok.py  mcbench_admin_api.py  mistral.py  (+4 more)
tests/: test_elo.py  test_export.py  test_text.py
(+275 files in other folders)
